--- a/src/index.scss
+++ b/src/index.scss
@@ -385,6 +385,122 @@ h3 > a {
   }
 }
 
+.register {
+  width: 50%;
+  max-width: 700px;
+
+  & form {
+    width: 100%;
+  }
+
+  .register-form-input {
+    display: flex;
+    padding: 10px 0 10px 0;
+    align-items: center;
+  }
+
+  .register-form-button {
+    width: 50%;
+    max-width: 400px;
+    padding-top: 10px;
+  }
+
+  .register-form-button-login {
+    width: 50%;
+    max-width: 200px;
+    padding-top: 10px;
+  }
+
+  & h4 {
+    font-size: 40px;
+    padding-bottom: 20px;
+    text-align: left;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: $color_secondary;
+  }
+
+  & p {
+    width: 25%;
+    text-align: left;
+    padding-right: 5px;
+    color: $color_label;
+    font-weight: bold;
+  }
+
+  & .register-submit-btns {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-top: 15px;
+
+    & .second {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
+
+  @media screen and (max-width: 1000px) {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    & .register-submit-btns {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding-top: 15px;
+      align-items: center;
+
+      & span {
+        font-size: 80%;
+      }
+
+      & .second {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+    }
+
+    & h4 {
+      font-size: 30px;
+      padding-bottom: 0;
+      text-align: center;
+    }
+
+    .register-form-input {
+      display: flex;
+      flex-direction: column;
+      padding: 0 0 10px 0;
+      align-items: center;
+
+      & p {
+        width: 100%;
+        text-align: center;
+      }
+    }
+
+    .register-form-button {
+      width: 80%;
+      max-width: 300px;
+      display: flex;
+      justify-content: center;
+    }
+    .register-form-button-login {
+      width: 80%;
+      max-width: 300px;
+    }
+  }
+}
+
 
 .custom-btn {
   display: flex;
