--- a/src/index.scss
+++ b/src/index.scss
@@ -617,17 +617,24 @@ h3 > a {
     flex-direction: column;
 
     & .paragraph {
+      margin: 5px 0 5px 0;
       width: 100%;
       display: flex;
+      align-items: center;
+      justify-content: center;
 
-      i {
-        padding-right: 5px;
+      img {
+        width: 45px;
+        height: 40px;
+        margin-right: 10px;
       }
 
       p {
         width: 100%;
         max-width: 1000px;
         font-size: 18px;
+        padding: 0;
+        margin: 0;
       }
     }
   }
@@ -673,21 +680,25 @@ h3 > a {
     }
 
     .hr-1 {
+      margin: 7px 0 7px 0;
       width: 100%;
       border-top: 0.01px solid #e1e1e1e1;
     }
 
     .hr-2 {
+      margin: 7px 0 7px 0;
       width: 100%;
       border-top: 0.01px solid #e1e1e1e1;
     }
 
     .hr-3 {
+      margin: 7px 0 7px 0;
       width: 100%;
       border-top: 1px solid #e1e1e1e1;
     }
 
     .hr-4 {
+      margin: 7px 0 7px 0;
       border: none;
     }
 
