--- a/src/index_.scss
+++ b/src/index_.scss
@@ -8,6 +8,144 @@ $btn_active_color: #B3A400;
 $btm_default_color: #229DD2;
 
 
+.modal-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: none;
+    background-color: #00000071;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    
+    &.active {
+        display: flex;
+    }
+    
+    .modal-frame {
+        position: relative;
+        min-width: 300px;
+        width: 35%;
+        min-height: 100px;
+        background-color: #ffffff;
+        border-radius: 10px;
+        overflow: hidden;
+        
+        
+        .modal-frame-inner {
+            margin: 10% 20% 10% 10%;
+            min-width: 220px;
+            z-index: 50;
+            text-align: left;
+            
+        }
+
+        &::before, &::after {
+            content: '';
+            z-index: 30;
+            position: absolute;
+            width: 100%;
+            height: 15%;
+            background-repeat: no-repeat;
+            
+        }
+        &::before {
+            left: 0;
+            background-image: url('./images/modal_bg_top.png');
+            background-position: 25% -680px;
+            background-size: auto;
+            
+        }
+        &::after {
+            bottom: 0;
+            right: 0;
+            
+            background-image: url('./images/modal_bg_bottom.png');
+            background-position: 23% -290px;
+            background-size: auto;
+        }
+    }
+    
+    i {
+        width: 60px;
+        height: 60px;
+        position: absolute;
+        top: 15px;
+        right: 0px;
+        color: #888888;
+        font-size: 24px;
+        cursor: pointer;
+        z-index: 100;
+    }
+
+
+    .contact-form__input-wrapper {
+        padding: 0;
+        margin: 30px 0;
+    }
+    .contact-form__input {
+        border: 1px solid #97969663;
+
+        &:focus {
+            outline: none;
+            box-shadow: 0 0 25px -10px #635e5e;
+        }
+        &.error {
+            box-shadow: 0 0 25px -10px #d82626;
+        }
+    }
+    .contact-form__input-label {
+        text-align: left;
+        top: -20px;
+        left: 10px;
+        color: #929292;
+    }
+    .contact-form-title {
+        text-align: left;
+        color: #1D7295;
+        font-weight: bold;
+        font-size: 30px;
+    }
+    .contact-form__agree {
+        font-size: 12px;
+        color: #959595;
+        text-align: left;
+        
+
+        &-link {
+            color: #959595;
+            &:hover {
+                color: #959595;
+            }
+        }
+    }
+    .contact-form__submit-btn {
+        width: 200px;
+        height: 50px;
+        margin: 0;
+    }
+
+    .basket-add-alert {
+        width: 100%;
+        justify-content: space-between;
+        margin-top: 20px;
+        
+        .contact-form__submit-btn {
+            height: 40px;
+        }
+        &__submit {
+            background-color: #1D7295;
+        }
+    }
+}
+
+
+
 .contact-form {
     
     color: #fff;
@@ -20,96 +158,116 @@ $btm_default_color: #229DD2;
         background-size: cover;
         background-repeat: no-repeat;
     }
+}
     
+.contact-form__title-wrapper {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact-form-title {
     
-    .contact-form__title-wrapper {
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 30px;
+    margin: 30px auto 10px;
+}
 
-    .contact-form-title {
-        
-        text-align: center;
-        text-transform: uppercase;
-        font-size: 30px;
-        margin: 30px auto 10px;
-    }
+.contact-form-subtitle {
+    
+    text-align: center;
+    font-size: 16px;
+    margin: 0 auto 20px;
+}
 
-    .contact-form-subtitle {
-        
-        text-align: center;
-        font-size: 16px;
-        margin: 0 auto 20px;
-    }
-
-    .contact-form__agree-link {
+.contact-form__agree-link {
+    color: #ffffff;
+    text-decoration: underline;
+    &:hover {
         color: #ffffff;
-        text-decoration: underline;
-    }
-
-
-    .contact-form__input-wrapper {
-        position: relative;
-        margin: 15px 0;
-    }
-
-    .contact-form__input-label {
-        position: absolute;
-        top: -20px;
-        left: 0;
-        width: 100%;
-        text-align: center;
-        font-size: 12px;
-        font-weight: 600;
-        color: #79ACC2;
-
-    }
-    .contact-form__input {
-        height: 40px;
-        width: 100%;
-        border-radius: 20px;
-        border: none;
-        background-color: #ffffff;
-        color: #000000;
-        padding: 0 30px;
-        
-        
-        &:focus {
-            outline: none;
-            box-shadow: 0 0 15px -5px #ffffff;
-        }
-        &.error {
-            box-shadow: 0 0 15px 0px #d82626;
-        }
-    }
-
-    .contact-form__submit-btn {
-        cursor: pointer;
-        user-select: none;
-        margin: 0 auto;
-        width: 250px;
-        height: 55px;
-        border-radius: 30px;
-        background-color: $btm_default_color;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: #ffffff;
-        font-weight: 500;
-        font-size: 14px;
-        transition: ease-in-out .1s;
-
-        &:hover {
-            box-shadow: 3px 3px 10px -5px #229DD2;
-        }
-        &:active {
-            box-shadow: 0 0 15px -5px #ffffff;
-            background-color: $btn_active_color;
-        }
     }
 }
+
+
+.contact-form__input-wrapper {
+    position: relative;
+    margin: 15px 0;
+
+    & .contact-form__required-badge {
+        position: absolute;
+        right: 20px;
+        top: 50%;
+        width: 4px;
+        height: 4px;
+        border-radius: 2px;
+        background-color: #229DD2;
+    }
+}
+
+.contact-form__input-label {
+    position: absolute;
+    top: -20px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 600;
+    color: #79ACC2;
+
+}
+.contact-form__input {
+    height: 40px;
+    width: 100%;
+    border-radius: 20px;
+    border: none;
+    background-color: #ffffff;
+    color: #000000;
+    padding: 0 30px;
+    
+    
+    &:focus {
+        outline: none;
+        box-shadow: 0 0 15px -5px #ffffff;
+    }
+    &.error {
+        box-shadow: 0 0 15px 0px #d82626;
+    }
+    
+}
+
+.contact-form-text {
+    font-size: 16px;
+    align-self: flex-start;
+    color: #434343;
+}
+
+.contact-form__submit-btn {
+    cursor: pointer;
+    user-select: none;
+    margin: 0 auto;
+    width: 250px;
+    height: 55px;
+    border-radius: 30px;
+    background-color: $btm_default_color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 14px;
+    transition: ease-in-out .1s;
+
+    &:hover {
+        //box-shadow: 0 0 15px -5px #ffffff;
+        background-color: $btn_active_color;
+    }
+    &:active {
+        //box-shadow: 0 0 25px -15px #229DD2;
+    }
+}
+
 
 .map-section {
     height: 450px;
