--- a/src/index_.scss
+++ b/src/index_.scss
@@ -7,6 +7,98 @@ $footer_height: 580px;
 $btn_active_color: #B3A400;
 $btm_default_color: #229DD2;
 
+.service-btn-group {
+    position: fixed;
+    bottom: 2%;
+    left: 1%;
+    z-index: 10;
+    
+    display: flex;
+    flex-direction: row;
+    
+
+    &.sticked {
+        position: fixed;
+        flex-direction: column;
+        right: 0;
+        top: 20%;
+        
+        bottom: unset;
+        left: unset;
+    }
+
+
+    & .service-btn {
+        margin-right: 5px;
+    }
+}
+
+.service-btn {
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-color: #1D7295;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    i {
+        cursor: pointer;
+        background-repeat: no-repeat;
+        width: 30px;
+        height: 30px;
+        background-position: 50% 50%;
+
+        &.mail {
+            background-image: url('./images/icons/service_btn_mail.png');
+        }
+        &.question {
+            background-image: url('./images/icons/service_btn_question.png');
+        }
+        &.phone {
+            background-image: url('./images/icons/service_btn_phone.png');
+        }
+    }
+
+    &:hover {
+        background-color: $btn_active_color;
+    }
+    .sticked & {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        margin-bottom: 10px;
+    }
+}
+
+.gallery {
+    height: 500px;
+    background-color: #fff;
+    padding: 20px;
+    color: #434343;
+
+    & .gallery__image {
+        width: 100%;
+        height: 90%;
+        object-fit: cover;
+        border-radius: 10px;
+    }
+
+    & .gallery-controls {
+        height: 10%;
+        width: 100%;
+        margin: 10px 0;
+        
+        
+        .gallery-controls__prev, .gallery-controls__next {
+            position: unset;
+            width: 30px;
+            height: 30px;
+            font-size: 18px;
+            cursor: pointer;
+        }
+    }
+}
 
 .modal-wrapper {
     width: 100%;
@@ -18,7 +110,6 @@ $btm_default_color: #229DD2;
     top: 0;
     left: 0;
     z-index: 100;
-    
     justify-content: center;
     align-items: center;
     align-content: center;
@@ -38,36 +129,48 @@ $btm_default_color: #229DD2;
         
         
         .modal-frame-inner {
-            margin: 10% 20% 10% 10%;
+            margin: 10% 20% 15% 10%;
             min-width: 220px;
             z-index: 50;
             text-align: left;
             
         }
 
-        &::before, &::after {
-            content: '';
-            z-index: 30;
-            position: absolute;
-            width: 100%;
-            height: 15%;
+        &.modal-frame-gallery {
+            & .modal-frame-inner::before {
+                content: '';
+                position: absolute;
+                right: 0;
+                top: 0;
+                width: 300px;
+                height: 300px;
+                //background-color: red;
+                z-index: 500;
+                background-image: url('./images/modal_bg_top.png');
+                background-position: -600px -700px;
+                
+                background-repeat: no-repeat;
+            }    
+            
+            img {
+                clip-path: polygon(87% 0, 100% 11%, 100% 100%, 0 100%, 0 0);
+            }
+            
+            width: 80%;
+
+            .modal-frame-inner {
+                margin: 0;
+            }
+        }
+
+        &_bg {
+            background-image: url('./images/modal_bg_top.png'), url('./images/modal_bg_bottom.png');
+            background-position: bottom 0% left 35%, bottom -170px left 30%;
+            background-size: auto;
             background-repeat: no-repeat;
-            
         }
-        &::before {
-            left: 0;
-            background-image: url('./images/modal_bg_top.png');
-            background-position: 25% -680px;
-            background-size: auto;
-            
-        }
-        &::after {
-            bottom: 0;
-            right: 0;
-            
-            background-image: url('./images/modal_bg_bottom.png');
-            background-position: 23% -290px;
-            background-size: auto;
+        &_bg-small {
+            background-position: top -700px left 30%, bottom -170px left 30%;
         }
     }
     
@@ -75,14 +178,25 @@ $btm_default_color: #229DD2;
         width: 60px;
         height: 60px;
         position: absolute;
-        top: 15px;
-        right: 0px;
+        top: 10px;
+        right: -5px;
         color: #888888;
         font-size: 24px;
         cursor: pointer;
-        z-index: 100;
+        z-index: 600;
     }
+}
 
+@media screen and (max-width: 668px){
+    &.modal-frame-gallery {
+        img {
+            clip-path: polygon(75% 0, 100% 11%, 100% 100%, 0 100%, 0 0) !important;
+        }
+    }
+}
+
+/* CONTACT FORM MODAL*/
+.modal-wrapper {
 
     .contact-form__input-wrapper {
         padding: 0;
@@ -128,15 +242,20 @@ $btm_default_color: #229DD2;
         width: 200px;
         height: 50px;
         margin: 0;
+        text-align: center;
+        margin-right: 10px;
     }
 
     .basket-add-alert {
         width: 100%;
         justify-content: space-between;
         margin-top: 20px;
+        flex-wrap: nowrap;
         
         .contact-form__submit-btn {
             height: 40px;
+            max-width: 200px;
+            min-width: 100px;
         }
         &__submit {
             background-color: #1D7295;
