--- a/src/index.scss
+++ b/src/index.scss
@@ -1117,12 +1117,12 @@ h3 > a {
 }
 
 .orders-label {
-    font-size: 40px;
-    padding-bottom: 20px;
-    text-align: left;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: $color_secondary;
+  font-size: 40px;
+  padding-bottom: 20px;
+  text-align: left;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: $color_secondary;
 }
 
 .orders-headers-container {
@@ -1431,7 +1431,8 @@ h3 > a {
       }
     }
   }
-  @media screen and (max-width: 1000px){
+
+  @media screen and (max-width: 1000px) {
     display: none;
   }
 }
@@ -1521,9 +1522,11 @@ h3 > a {
   z-index: 200;
   font-weight: bold;
   color: gray;
+  cursor: pointer;
+
   &:active {
     background-color: #e9e9e9;
-    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -1541,17 +1544,18 @@ h3 > a {
   left: 0;
   z-index: 21;
   max-width: 400px;
+  max-height: 2000px;
 
-  &.list {
+  & .list {
     overflow: hidden;
     max-height: 2000px;
     padding-right: 0;
     transition: max-height 1.3s ease-in-out;
   }
 
-  &.small-list {
+  & .small-list {
     overflow: hidden;
-    max-height: 400px;
+    max-height: 500px;
     padding-right: 0;
     transition: max-height 1.3s ease-in-out;
   }
@@ -1579,6 +1583,8 @@ h3 > a {
     background-color: $color_primary;
     padding: 15px;
     border-radius: 25px;
+    display: flex;
+    justify-content: space-between;
 
     & a {
       text-decoration: none;
@@ -1600,7 +1606,28 @@ h3 > a {
   }
 }
 
+.icon-more-less {
+  &.show {
+    & .icon-more {
+      display: none;
+    }
+
+    & .icon-less {
+      display: block;
+    }
+  }
+
+  & .icon-more {
+    display: block;
+  }
+
+  & .icon-less {
+    display: none;
+  }
+}
+
 .index_page .catalog_main {
+
 
   position: unset;
   max-height: unset;
@@ -1612,64 +1639,64 @@ h3 > a {
   }
 }
 
-  .catalog_main .collapse {
+.catalog_main .collapse {
 
-    &.show {
-      position: sticky;
-      background-color: #ffffff;
-      border: 1px solid #c7c7c7;
+  &.show {
+    position: sticky;
+    background-color: #ffffff;
+    border: 1px solid #c7c7c7;
+    width: 100%;
+    left: 100%;
+    top: 0;
+
+    & .text-left {
+      border-bottom: 1px solid #c7c7c7;
+    }
+
+    .collapsed & {
+      display: none;
+    }
+
+    .card-body {
+      padding: 0 !important;
+    }
+  }
+
+}
+
+.collapsing {
+  -webkit-transition: none;
+  transition: none;
+  display: none;
+}
+
+@media screen and (max-width: 992px) {
+  .catalog_link {
+    padding-right: 0 !important;
+    border-right: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .nav-link {
+    font-size: 1rem;
+  }
+  .catalog_main {
+    width: 100%;
+
+    & .alert-success {
       width: 100%;
-      left: 100%;
-      top: 0;
-
-      & .text-left {
-        border-bottom: 1px solid #c7c7c7;
-      }
-
-      .collapsed & {
-        display: none;
-      }
-
-      .card-body {
-        padding: 0 !important;
-      }
     }
 
-  }
-
-  .collapsing {
-    -webkit-transition: none;
-    transition: none;
-    display: none;
-  }
-
-  @media screen and (max-width: 992px) {
-    .catalog_link {
-      padding-right: 0 !important;
-      border-right: none;
+    & .collapse {
+      &.show {
+        position: unset;
+        border: none;
+      }
     }
   }
 
-  @media screen and (max-width: 768px) {
-    .nav-link {
-      font-size: 1rem;
-    }
-    .catalog_main {
-      width: 100%;
-
-      & .alert-success {
-        width: 100%;
-      }
-
-      & .collapse {
-        &.show {
-          position: unset;
-          border: none;
-        }
-      }
-    }
-
-  }
+}
 
 div {
   &.show {
@@ -1741,21 +1768,21 @@ div {
 }
 
 
-  .dropdown-share {
-    & .dropdown-menu {
-      &.share {
-        padding: 10px 10px 10px 20px;
+.dropdown-share {
+  & .dropdown-menu {
+    &.share {
+      padding: 10px 10px 10px 20px;
 
-        & > * {
-          padding-left: 0;
-        }
+      & > * {
+        padding-left: 0;
       }
     }
   }
+}
 
-  .card-position {
-    position: relative;
-  }
+.card-position {
+  position: relative;
+}
 
 .card-sticker {
   HEIGHT: 60px;
@@ -1809,227 +1836,232 @@ div {
         margin-bottom: 0;
       }
 
-        & .card-controls {
-          margin-top: 1rem;
-        }
+      & .card-controls {
+        margin-top: 1rem;
       }
     }
+  }
 
-    & .card-title {
-      max-height: 3rem;
-      min-height: 3rem;
-      width: 100%;
-      overflow: hidden;
+  & .card-title {
+    max-height: 3rem;
+    min-height: 3rem;
+    width: 100%;
+    overflow: hidden;
+  }
+
+  &:hover {
+    opacity: 1;
+    z-index: 5;
+  }
+
+  & .dropdown-share {
+    position: absolute;
+    top: 1px;
+    right: -8px;
+  }
+
+  .card-text {
+    font-size: 1.2rem;
+
+    & > span {
+      font-size: 1.4rem;
+    }
+  }
+}
+
+.news-card {
+  .carousel-indicators {
+    z-index: 9;
+  }
+
+  & .carousel-inner {
+    max-width: 60%;
+    margin: 0 auto;
+    overflow: visible;
+  }
+
+  & .news-card__controls {
+    z-index: 10;
+  }
+
+  & .card-body .col-md-12 {
+    padding: 0;
+  }
+
+  & .card-position {
+
+    position: relative;
+    margin-bottom: 100px;
+  }
+
+  & .hover {
+    position: relative;
+  }
+}
+
+.products-toolbar {
+
+  & .products-toolbar-group {
+    background-color: #ffffff;
+    box-shadow: 0px 0px 10px 1px #c7c7c7;
+    min-height: 3rem;
+    align-items: center;
+  }
+
+  & .products-toolbar-item {
+    list-style: none;
+
+    &__text {
+      font-size: .8rem;
+      text-decoration: none;
+      color: #c4c4c4
+    }
+
+    &__selected {
+      font-size: .8rem;
+      text-decoration: none;
+      color: #27b803;
+    }
+
+    & #dropdownMenuLink::after {
+      color: #27b803;
+    }
+  }
+}
+
+.product-page {
+  min-height: 65vh;
+
+  & .image-gallery {
+    min-width: 270px;
+    max-width: 60%;
+  }
+}
+
+.row {
+  margin: 0;
+}
+
+.carousel {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 800px;
+
+  .carousel-item {
+    width: 100%;
+    height: 40vh;
+    position: relative;
+
+    &.height-auto {
+      height: auto;
+    }
+
+    img {
+      height: 100%;
+      max-height: 250px;
+      width: auto;
+      margin: 0 auto;
+      object-fit: contain;
+      display: inline-block;
+    }
+
+    .carousel-caption {
+      background-color: rgba(40, 167, 69, .6); //rgba(0,0,0, .5);
+      color: #ffffff;
+      border-radius: 15px;
+      z-index: 1;
+    }
+  }
+
+  .carousel-control-prev, .carousel-control-next {
+    color: #000000;
+    background-color: rgba(255, 255, 255, 0);
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .carousel {
+    .carousel-item {
+      img {
+        width: 75%;
+      }
+    }
+  }
+}
+
+.main-catalog-list {
+  border: 1px solid #c7c7c7;
+  max-width: 400px;
+
+  &__item {
+    text-align: left;
+    padding: 0 1rem;
+    border-bottom: 1px solid #c7c7c7;
+
+    & .main-catalog-list__text {
+      color: #000000;
+      line-height: 1.8rem;
+      text-transform: uppercase;
+      font-weight: 300;
+
     }
 
     &:hover {
-      opacity: 1;
-      z-index: 5;
-    }
-
-    & .dropdown-share {
-      position: absolute;
-      top: 1px;
-      right: -8px;
-    }
-
-    .card-text {
-      font-size: 1.2rem;
-
-      & > span {
-        font-size: 1.4rem;
-      }
+      box-shadow: 0 0 2px 1px #c7c7c7;
     }
   }
+}
 
-  .news-card {
-    .carousel-indicators {
-      z-index: 9;
-    }
+.btn {
+  margin-left: 10px;
+  margin-right: 10px;
 
-    & .carousel-inner {
-      max-width: 60%;
-      margin: 0 auto;
-      overflow: visible;
-    }
-
-    & .news-card__controls {
-      z-index: 10;
-    }
-
-    & .card-body .col-md-12 {
-      padding: 0;
-    }
-
-    & .card-position {
-
-      position: relative;
-      margin-bottom: 100px;
-    }
-
-    & .hover {
-      position: relative;
-    }
-  }
-
-  .products-toolbar {
-
-    & .products-toolbar-group {
-      background-color: #ffffff;
-      box-shadow: 0px 0px 10px 1px #c7c7c7;
-      min-height: 3rem;
-      align-items: center;
-    }
-
-    & .products-toolbar-item {
-      list-style: none;
-
-      &__text {
-        font-size: .8rem;
-        text-decoration: none;
-        color: #c4c4c4
-      }
-
-      &__selected {
-        font-size: .8rem;
-        text-decoration: none;
-        color: #27b803;
-      }
-
-      & #dropdownMenuLink::after {
-        color: #27b803;
-      }
-    }
-  }
-
-  .product-page {
-    min-height: 65vh;
-
-    & .image-gallery {
-      min-width: 270px;
-      max-width: 60%;
-    }
-  }
-
-  .row {
-    margin: 0;
-  }
-
-  .carousel {
-    margin: 0 auto;
+  &.btn-basket {
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 5px;
+    padding-right: 5px;
     width: 100%;
-    max-width: 800px;
-
-    .carousel-item {
-      width: 100%;
-      height: 40vh;
-      position: relative;
-
-      &.height-auto {
-        height: auto;
-      }
-
-      img {
-        height: 100%;
-        max-height: 250px;
-        width: auto;
-        margin: 0 auto;
-        object-fit: contain;
-        display: inline-block;
-      }
-
-      .carousel-caption {
-        background-color: rgba(40, 167, 69, .6); //rgba(0,0,0, .5);
-        color: #ffffff;
-        border-radius: 15px;
-        z-index: 1;
-      }
-    }
-
-    .carousel-control-prev, .carousel-control-next {
-      color: #000000;
-      background-color: rgba(255, 255, 255, 0);
-    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
-  @media screen and (max-width: 992px) {
-    .carousel {
-      .carousel-item {
-        img {
-          width: 75%;
-        }
-      }
-    }
+  &.input-group-text {
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .main-catalog-list {
-    border: 1px solid #c7c7c7;
-    max-width: 400px;
-
-    &__item {
-      text-align: left;
-      padding: 0 1rem;
-      border-bottom: 1px solid #c7c7c7;
-
-      & .main-catalog-list__text {
-        color: #000000;
-        line-height: 1.8rem;
-        text-transform: uppercase;
-        font-weight: 300;
-
-      }
-
-      &:hover {
-        box-shadow: 0 0 2px 1px #c7c7c7;
-      }
-    }
+  .btn-label {
+    font-size: .7rem;
+    padding-right: 5px;
   }
+}
 
-  .btn {
-    margin-left: 10px;
-    margin-right: 10px;
-
-    &.btn-basket {
-      margin-left: 0;
-      margin-right: 0;
-      padding-left: 5px;
-      padding-right: 5px;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    &.input-group-text {
-      margin-left: 0;
-      margin-right: 0;
-    }
-
-    .btn-label {
-      font-size: .7rem;
-      padding-right: 5px;
-    }
-  }
+.catalog-item {
+  cursor: pointer;
+}
 
 nav.navbar {
   box-shadow: 0 0 20px -5px #a1a1a1;
   background-color: #229dd2;
 
-    .ml-auto {
-      .dropdown-menu {
-        right: 0;
-        left: unset;
-      }
-    }
-
-    nav .navbar-nav .nav-link {
-      font-size: .9rem;
-
-      .inRound {
-        padding: 5px;
-      }
+  .ml-auto {
+    .dropdown-menu {
+      right: 0;
+      left: unset;
     }
   }
+
+  nav .navbar-nav .nav-link {
+    font-size: .9rem;
+
+
+    .inRound {
+      padding: 5px;
+    }
+  }
+}
 
 .nav-item {
   white-space: nowrap;
@@ -2059,94 +2091,94 @@ nav.navbar {
 }
 
 
-  .news {
-    padding: 15px;
+.news {
+  padding: 15px;
 
-    .newsImage {
-      width: 80%;
-      margin: 0 auto;
-    }
+  .newsImage {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
+
+.alert {
+  padding: 0;
+  border-color: #c7c7c7;
+  max-height: 60vh;
+  overflow-y: scroll;
+
+  & .text-left {
+    padding: 0 10px;
+    padding-left: 20px;
+    border-bottom: 1px solid #c7c7c7;
+    position: relative;
   }
 
-  .alert {
-    padding: 0;
-    border-color: #c7c7c7;
-    max-height: 60vh;
-    overflow-y: scroll;
+  & .empty-item {
+    height: 2rem;
+  }
 
-    & .text-left {
-      padding: 0 10px;
-      padding-left: 20px;
-      border-bottom: 1px solid #c7c7c7;
-      position: relative;
-    }
+  .alert-link {
+    font-weight: 300;
+    line-height: 1.7rem;
 
-    & .empty-item {
-      height: 2rem;
-    }
-
-    .alert-link {
-      font-weight: 300;
-      line-height: 1.7rem;
-
-      &.active {
-        i {
-          font-weight: 300;
-          text-decoration: underline;
-          cursor: pointer;
-        }
+    &.active {
+      i {
+        font-weight: 300;
+        text-decoration: underline;
+        cursor: pointer;
       }
     }
-
-    .alert-link-sub {
-      display: inline-block;
-      font-size: 1.2rem;
-      font-weight: normal;
-      line-height: 1.7rem;
-      color: #000;
-      padding: 0 20px .5rem 1rem;
-
-    }
   }
 
-  .fa {
-    span {
-      font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    }
+  .alert-link-sub {
+    display: inline-block;
+    font-size: 1.2rem;
+    font-weight: normal;
+    line-height: 1.7rem;
+    color: #000;
+    padding: 0 20px .5rem 1rem;
+
   }
+}
 
-  .fav-img {
-    max-width: 10vw;
+.fa {
+  span {
+    font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   }
+}
 
-  .workshop-banner {
+.fav-img {
+  max-width: 10vw;
+}
 
-    &__image {
-      max-width: 800px;
-      width: 100%;
-      object-fit: contain;
-    }
+.workshop-banner {
+
+  &__image {
+    max-width: 800px;
+    width: 100%;
+    object-fit: contain;
   }
+}
 
-  .editorClassName {
-    height: 30vh !important;
-  }
+.editorClassName {
+  height: 30vh !important;
+}
 
-  .scrollDownBtn {
-    background-color: rgba(0, 0, 0, 0);
-    border-radius: 50%;
-    border: 5px solid black;
-    height: 50px;
-    position: fixed;
-    bottom: 20px;
-    width: 50px;
-    transition: opacity 0.5s ease-in-out 0s, right;
-    cursor: pointer;
-    z-index: 50;
-  }
+.scrollDownBtn {
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 50%;
+  border: 5px solid black;
+  height: 50px;
+  position: fixed;
+  bottom: 20px;
+  width: 50px;
+  transition: opacity 0.5s ease-in-out 0s, right;
+  cursor: pointer;
+  z-index: 50;
+}
 
 
-  /*FIRST*/
+/*FIRST*/
 
 .defaultTopMenu {
   height: 100px;
@@ -2187,11 +2219,13 @@ nav.navbar {
 
 .dropdown-basket {
   padding: 10px;
+
   & button {
     color: white;
     font-size: 12px;
     background-color: #b3a501;
   }
+
   & span {
     color: #b3a501;
   }
