--- a/src/index.scss
+++ b/src/index.scss
@@ -127,6 +127,12 @@ h3 > a {
   background-color: #229dd2;
   border-radius: 0 20px 20px 0;
   padding: 5px 10px 5px 15px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #b3a501;
+    text-decoration: none;
+  }
 
   @media screen and (max-width: 374px) {
     width: 95%;
@@ -1585,6 +1591,11 @@ h3 > a {
     border-radius: 25px;
     display: flex;
     justify-content: space-between;
+    font-weight: bold;
+
+    &:hover {
+      background-color: #b3a400;
+    }
 
     & a {
       text-decoration: none;
@@ -2040,6 +2051,13 @@ div {
 
 .catalog-item {
   cursor: pointer;
+  color: $color_label;
+  font-weight: normal;
+
+    &:hover {
+      color: #b3a501;
+      text-decoration: none;
+    }
 }
 
 nav.navbar {
