--- a/src/index_.scss
+++ b/src/index_.scss
@@ -17,6 +17,102 @@ $btn_default_color: #229DD2;
                                     not supported by any browser */
 }
 
+
+.sub-categories-select {
+    position: relative;
+    
+
+    & .sub-categories-select__title {
+        display: flex;
+        cursor: pointer;
+        position: relative;
+        height: 40px;
+        width: 100%;
+        border-radius: 20px;
+        background-color: #ffffff;
+        border: 1px solid #afafaf83;
+        padding: 8px 0 0 0;
+        padding-left: 20px;
+        margin: 10px auto;
+        color: #434343;
+        font-size: 14px;
+        z-index: 5;
+    }
+
+    .sub-categories-select-list {
+        display: none;
+
+        &_show {
+            z-index: 2;
+            position: absolute;
+            top: 20px;
+            left: 0;
+            width: 100%;
+            max-height: 500px;
+            overflow-y: scroll;
+            display: flex;
+            flex-flow: column nowrap;
+            align-items: flex-start;
+            background-color: #ffffff;
+            padding: 40px 10px;
+            border-radius: 10px;
+            border: 1px solid #afafaf83;
+
+            &::-webkit-scrollbar {
+                width: 3px;
+            }
+    
+            &::-webkit-scrollbar-thumb {
+                background: #229DD2;
+            }
+            
+            &::-webkit-scrollbar-thumb:hover {
+                background: #25779b;
+            }
+
+            & a {
+                color: #434343;
+                text-decoration: none;
+                font-size: 14px;
+            }
+        }
+    }
+}
+
+.sub-categories-row {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 20px auto;
+    
+    &__item {
+        margin: 0 10px 5px 0;
+        height: 28px;
+        padding: 0 15px;
+        border: 1px solid #afafaf83;
+        border-radius: 14px;
+        background-color: #ffffff;
+        
+        text-align: center;
+        vertical-align: text-top;
+        
+
+        &:hover {
+            background-color: $btn_active_color;
+            & a {
+                color: #ffffff;
+            }
+        }
+
+        & a {
+            
+            text-decoration: none;
+            line-height: 0px;
+            font-size: 14px;
+            color: #434343;
+        }
+    }
+}
+
 .product-card {
     position: relative;
     display: flex;
@@ -28,7 +124,7 @@ $btn_default_color: #229DD2;
     
 
     &_tile {
-        max-width: 260px;
+        width: 260px;
         flex-direction: column;
         justify-content: space-between;
     }
